--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "node ./scripts/start.js",
     "build": "webpack --config webpack.config.js --mode production",
     "lint:types": "tsc",
-    "format": "prettier {components,examples,src,utils}/**/*.ts* --no-config --write",
-    "format:check": "prettier {components,examples,src,utils}/**/*.ts* --no-config --check --ignore-path",
+    "format": "prettier '{components,examples,src,utils,storybook}/**/*.{css,ts,tsx}' --no-config --write",
+    "format:check": "prettier '{components,examples,src,utils,storybook}/**/*.{css,ts,tsx}' --no-config --check --ignore-path",
     "format:file": "prettier $1 --no-config --write",
     "test": "jest --no-cache",
     "test:watch": "jest --no-cache --watch"
@@ -20,9 +20,8 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "private": true,
   "dependencies": {
-    "@canva/app-ui-kit": "^1.0.0-beta.2",
+    "@canva/app-ui-kit": "^1.0.0",
     "@canva/asset": "./sdk/asset",
-    "@canva/data-provider": "./sdk/data_provider",
     "@canva/design": "./sdk/design",
     "@canva/error": "./sdk/error",
     "@canva/preview": "./sdk/preview",
@@ -60,6 +59,7 @@
     "mini-css-extract-plugin": "^2.6.1",
     "ngrok": "^4.3.3",
     "node-fetch": "^2.6.7",
+    "node-forge": "^1.3.1",
     "nodemon": "^2.0.19",
     "postcss-loader": "^7.3.3",
     "prettier": "^2.7.1",
