--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@canva/asset": "./sdk/asset",
     "@canva/design": "./sdk/design",
     "@canva/error": "./sdk/error",
+    "@canva/platform": "./sdk/platform",
     "@canva/preview": "./sdk/preview",
     "@canva/user": "./sdk/user",
     "clsx": "^1.2.1",
@@ -62,7 +63,7 @@
     "ngrok": "^4.3.3",
     "node-fetch": "^2.6.7",
     "node-forge": "^1.3.1",
-    "nodemon": "^2.0.19",
+    "nodemon": "^3.0.1",
     "postcss-loader": "^7.3.3",
     "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
