--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "canva-apps-sdk-starter-kit",
   "description": "A boilerplate for creating Canva Apps.",
   "engines": {
-    "node": "^18",
-    "npm": "^9"
+    "node": "^18 || ^20.10.0",
+    "npm": "^9 || ^10"
   },
   "scripts": {
     "start": "node ./scripts/start.js",
@@ -21,12 +21,12 @@
   "private": true,
   "dependencies": {
     "@canva/app-ui-kit": "^3.1.0",
-    "@canva/asset": "./sdk/asset",
-    "@canva/design": "./sdk/design",
-    "@canva/error": "./sdk/error",
-    "@canva/platform": "./sdk/platform",
+    "@canva/asset": "^1.2.0",
+    "@canva/design": "^1.4.0",
+    "@canva/error": "^1.1.0",
+    "@canva/platform": "^1.0.1",
     "@canva/preview": "./sdk/preview",
-    "@canva/user": "./sdk/user",
+    "@canva/user": "^1.0.0",
     "clsx": "^1.2.1",
     "cookie-parser": "^1.4.6",
     "react": "^18.1.0",
@@ -40,7 +40,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.7.14",
+    "@types/node": "^20.10.0",
     "@types/node-fetch": "^2.6.2",
     "@types/nodemon": "^1.19.2",
     "@types/react-dom": "^18.1.0",
