--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,7 @@
   },
   "include": [
     "./src/**/*",
+    "./scripts/**/*",
     "./examples/**/*",
     "./components/**/*",
     "./declarations/declarations.d.ts",
