--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "ts-node ./scripts/start/start.ts",
     "build": "webpack --config webpack.config.js --mode production",
     "lint:types": "tsc",
-    "format": "prettier '{components,examples,src,utils,scripts}/**/*.{css,ts,tsx}' --no-config --write",
-    "format:check": "prettier '{components,examples,src,utils,scripts}/**/*.{css,ts,tsx}' --no-config --check --ignore-path",
+    "format": "prettier '{examples,src,utils,scripts}/**/*.{css,ts,tsx}' --no-config --write",
+    "format:check": "prettier '{examples,src,utils,scripts}/**/*.{css,ts,tsx}' --no-config --check --ignore-path",
     "format:file": "prettier $1 --no-config --write",
     "test": "jest --no-cache",
     "test:watch": "jest --no-cache --watch"
@@ -20,9 +20,10 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "private": true,
   "dependencies": {
-    "@canva/app-ui-kit": "^3.2.0",
-    "@canva/asset": "^1.2.0",
-    "@canva/design": "^1.5.0",
+    "@canva/app-components": "^1.0.0-beta.3",
+    "@canva/app-ui-kit": "^3.3.0",
+    "@canva/asset": "^1.3.0",
+    "@canva/design": "^1.6.0",
     "@canva/error": "^1.1.0",
     "@canva/platform": "^1.0.1",
     "@canva/preview": "./sdk/preview",
@@ -34,6 +35,7 @@
     "react-infinite-scroller": "^1.2.6"
   },
   "devDependencies": {
+    "@ngrok/ngrok": "^1.1.0",
     "@svgr/webpack": "^8.0.1",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.13",
@@ -64,7 +66,6 @@
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
     "mini-css-extract-plugin": "^2.6.1",
-    "ngrok": "^4.3.3",
     "node-fetch": "^2.6.7",
     "node-forge": "^1.3.1",
     "nodemon": "^3.0.1",
