--- a/package.json
+++ b/package.json
@@ -19,26 +19,23 @@
   "author": "Canva Pty Ltd.",
   "license": "SEE LICENSE IN LICENSE.md",
   "private": true,
+  "workspaces": [
+    "examples/*"
+  ],
   "dependencies": {
-    "@canva/app-components": "^1.0.0-beta.10",
-    "@canva/app-ui-kit": "^3.3.0",
+    "@canva/app-ui-kit": "^3.4.0",
     "@canva/asset": "^1.4.0",
     "@canva/design": "^1.6.0",
     "@canva/error": "^1.1.0",
     "@canva/platform": "^1.0.1",
     "@canva/preview": "./sdk/preview",
     "@canva/user": "^1.0.0",
-    "clsx": "^1.2.1",
-    "cookie-parser": "^1.4.6",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-infinite-scroller": "^1.2.6"
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@ngrok/ngrok": "^1.1.0",
     "@svgr/webpack": "^8.0.1",
-    "@types/cookie-parser": "^1.4.4",
-    "@types/cors": "^2.8.13",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.4.0",
@@ -49,11 +46,9 @@
     "@types/nodemon": "^1.19.2",
     "@types/prompts": "^2.4.2",
     "@types/react-dom": "^18.1.0",
-    "@types/react-infinite-scroller": "^1.2.5",
     "@types/webpack-env": "^1.18.0",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.2",
-    "cors": "^2.8.5",
     "css-loader": "^6.7.1",
     "css-modules-typescript-loader": "^4.0.1",
     "cssnano": "^6.0.1",
