Added the ability to add a richtext element, and ESLint to the repo (#34)
2024-07-18

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
         run: npm run test
       - name: Run prettier
         run: npm run format:check
+      - name: Run eslint
+        run: npm run lint
       - name: Lint types
         run: npm run lint:types
       - name: Run build
