--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "ts-node ./scripts/start/start.ts",
     "build": "webpack --config webpack.config.js --mode production",
     "lint:types": "tsc",
-    "format": "prettier '{examples,src,utils,scripts}/**/*.{css,ts,tsx}' --no-config --write",
-    "format:check": "prettier '{examples,src,utils,scripts}/**/*.{css,ts,tsx}' --no-config --check --ignore-path",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier '{examples,src,utils,scripts}/**/*.{css,ts,tsx,json,js}' --no-config --write",
+    "format:check": "prettier '{examples,src,utils,scripts}/**/*.{css,ts,tsx,json,js}' --no-config --check --ignore-path",
     "format:file": "prettier $1 --no-config --write",
     "test": "jest --no-cache",
     "test:watch": "jest --no-cache --watch"
@@ -34,6 +36,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
     "@ngrok/ngrok": "^1.1.0",
     "@svgr/webpack": "^8.0.1",
     "@types/debug": "^4.1.7",
@@ -48,6 +51,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/webpack-env": "^1.18.0",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.2",
     "css-loader": "^6.7.1",
@@ -55,6 +60,10 @@
     "cssnano": "^6.0.1",
     "debug": "^4.3.4",
     "dotenv": "^16.0.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "exponential-backoff": "^3.1.0",
     "express": "^4.18.1",
     "express-basic-auth": "^1.2.1",
