--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   },
   "scripts": {
     "start": "ts-node ./scripts/start/start.ts",
-    "extract": "formatjs extract 'src/**/*.{ts,tsx}' --out-file dist/messages_en.json",
+    "extract": "formatjs extract src/**/*.{ts,tsx} --out-file dist/messages_en.json",
     "build": "webpack --config webpack.config.js --mode production && npm run extract",
     "lint:types": "tsc",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier '{examples,src,utils,scripts}/**/*.{css,ts,tsx,json,js}' --no-config --write",
-    "format:check": "prettier '{examples,src,utils,scripts}/**/*.{css,ts,tsx,json,js}' --no-config --check --ignore-path",
+    "format": "prettier '{examples,src,utils,scripts}/**/*.{css,ts,tsx,json,js,mjs}' --write",
+    "format:check": "prettier '{examples,src,utils,scripts}/**/*.{css,ts,tsx,json,js,mjs}' --check",
     "format:file": "prettier $1 --no-config --write",
     "test": "jest --no-cache",
-    "test:watch": "jest --no-cache --watch"
+    "test:watch": "jest --no-cache --watch",
+    "postinstall": "ts-node ./scripts/copy-env.ts"
   },
   "keywords": [],
   "author": "Canva Pty Ltd.",
@@ -26,8 +27,8 @@
     "./examples/*"
   ],
   "dependencies": {
-    "@canva/app-i18n-kit": "^0.0.1-beta.5",
-    "@canva/app-ui-kit": "^4.0.0",
+    "@canva/app-i18n-kit": "^1.0.0",
+    "@canva/app-ui-kit": "^4.1.0",
     "@canva/asset": "^2.0.0",
     "@canva/design": "^2.1.0",
     "@canva/error": "^2.0.0",
@@ -39,42 +40,42 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.1.0",
-    "@eslint/js": "9.9.0",
+    "@eslint/js": "9.12.0",
     "@formatjs/cli": "6.2.12",
     "@formatjs/ts-transformer": "3.13.14",
     "@ngrok/ngrok": "1.4.1",
     "@svgr/webpack": "8.1.0",
     "@testing-library/dom": "10.4.0",
-    "@testing-library/react": "16.0.0",
+    "@testing-library/react": "16.0.1",
     "@types/debug": "4.1.12",
     "@types/express": "4.17.21",
-    "@types/jest": "29.5.12",
-    "@types/jsonwebtoken": "9.0.6",
+    "@types/jest": "29.5.13",
+    "@types/jsonwebtoken": "9.0.7",
     "@types/node": "20.10.0",
     "@types/node-fetch": "2.6.11",
     "@types/node-forge": "1.3.11",
     "@types/nodemon": "1.19.6",
     "@types/prompts": "2.4.9",
-    "@types/react": "18.3.4",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
     "@types/webpack-env": "1.18.5",
-    "@typescript-eslint/eslint-plugin": "8.2.0",
-    "@typescript-eslint/parser": "8.2.0",
+    "@typescript-eslint/eslint-plugin": "8.9.0",
+    "@typescript-eslint/parser": "8.9.0",
     "chalk": "4.1.2",
     "cli-table3": "0.6.5",
     "css-loader": "7.1.2",
     "css-modules-typescript-loader": "4.0.1",
-    "cssnano": "7.0.5",
-    "debug": "4.3.6",
+    "cssnano": "7.0.6",
+    "debug": "4.3.7",
     "dotenv": "16.4.5",
-    "eslint": "8.57.1",
-    "eslint-plugin-formatjs": "4.13.3",
-    "eslint-plugin-jest": "28.8.0",
-    "eslint-plugin-react": "7.35.0",
+    "eslint": "9.12.0",
+    "eslint-plugin-formatjs": "5.0.0",
+    "eslint-plugin-jest": "28.8.3",
+    "eslint-plugin-react": "7.37.1",
     "exponential-backoff": "3.1.1",
-    "express": "4.21.0",
+    "express": "4.21.1",
     "express-basic-auth": "1.2.1",
-    "globals": "15.9.0",
+    "globals": "15.11.0",
     "jest": "29.7.0",
     "jest-css-modules-transform": "4.4.2",
     "jest-environment-jsdom": "29.7.0",
@@ -89,14 +90,14 @@
     "prompts": "2.4.2",
     "style-loader": "4.0.0",
     "terser-webpack-plugin": "5.3.10",
-    "ts-jest": "29.2.4",
+    "ts-jest": "29.2.5",
     "ts-loader": "9.5.1",
     "ts-node": "10.9.2",
     "typescript": "5.5.4",
     "url-loader": "4.1.1",
-    "webpack": "5.94.0",
+    "webpack": "5.95.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "5.0.4",
+    "webpack-dev-server": "5.1.0",
     "yargs": "17.7.2"
   }
 }
