--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@canva/error": "^2.0.0",
     "@canva/platform": "^2.0.0",
     "@canva/user": "^2.0.0",
+    "openai": "^4.70.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-intl": "6.6.8"
@@ -82,7 +83,7 @@
     "jsonwebtoken": "9.0.2",
     "jwks-rsa": "3.1.0",
     "mini-css-extract-plugin": "2.9.1",
-    "node-fetch": "3.3.2",
+    "node-fetch": "^3.3.2",
     "node-forge": "1.3.1",
     "nodemon": "3.0.1",
     "postcss-loader": "8.1.1",
@@ -92,7 +93,7 @@
     "terser-webpack-plugin": "5.3.10",
     "ts-jest": "29.2.5",
     "ts-loader": "9.5.1",
-    "ts-node": "10.9.2",
+    "ts-node": "^10.9.2",
     "typescript": "5.5.4",
     "url-loader": "4.1.1",
     "webpack": "5.95.0",
